# Mini-Git-version-control-system

./: CMakeLists.txt  CODE DOCUMENTATION.md  README.md  makefile
include/: CommitManager.h  CommitNode.h  HashTable.h  HashingHelper.h  Repository.h  Restore.h
src/: CommitManager.cpp  CommitNode.cpp  HashTable.cpp  HashingHelper.cpp  Repository.cpp  Restore.cpp  main.cpp
